Remove unneeded getting of window and DOMWindowUtils so that GetViewportInfo can still return correct information while page is displayed during navigation away from it.  (Bug 737621)  r=sjohnson